<resources>
    <string name="app_name">Golder</string>
    <string name="bottom_tab_home">首页</string>
    <string name="bottom_tab_order">订单</string>
    <string name="bottom_tab_shopping">购物车</string>
    <string name="bottom_tab_me">我的</string>
    <string name="text_home_top_hechuan">合川</string>
    <string name="text_no_login">未登录</string>
    <string name="text_shopcart_tip">购物车为空，赶紧去选购吧！</string>
    <string name="text_top_me_headname">西湖的水偷走了你几分美</string>
    <string name="text_top_me_desc">一切尽在身边...</string>
    <string name="text_me_coupon">优惠券</string>
    <string name="text_me_shoppingcard">购物卡</string>
    <string name="text_me_sign">签到</string>
    <string name="text_me_collection">收藏</string>
    <string name="text_me_store">积分商城</string>
    <string name="text_me_address">收货地址</string>
    <string name="text_me_activity">最近活动</string>
    <string name="text_me_share">分享有奖</string>
    <string name="text_me_setting">设置</string>
    <string name="text_me_suggestion">意见反馈</string>
    <string name="text_me_aboutus">关于我们</string>
    <string name="text_home_ykltitle">宜客乐</string>
    <string name="text_delivery_meaasge">10元起送   免配送费</string>
    <string name="text_distance">距您1km</string>
    <string name="text_home_ydtitle">悦动超市</string>
    <string name="text_home_market_show_notice">公告：暂无</string>
    <string name="text_name_line">--------------</string>
    <string name="text_selected_shopping_show">10元起送</string>
    <string name="text_settlement">立即结算</string>
    <string name="text_makesure_settlement">确认订单</string>
    <string name="text_payment">付款</string>
    <string name="text_bill_number">订单号: </string>
    <string name="text_bill_time"  >下单时间:</string>
    <string name="text_bill_money">付款金额:¥</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="text_user_login_title">Golder账户登录</string>
    <string name="text_user_name">账号</string>
    <string name="text_input_password">请输入密码</string>
    <string name="text_password">密码</string>
    <string name="text_makesure_password">确认密码</string>
    <string name="text_email">邮箱</string>
    <string name="text_login_phonenum">手机</string>
    <string name="text_user_hint">账号/手机号</string>
    <string name="text_user_free_resiger">免费注册</string>
    <string name="text_user_resiger">注册</string>
    <string name="text_user_login">登录</string>
    <string name="text_user_register_name">用户名</string>
    <string name="text_user_forget_pwd">忘记密码</string>
    <string name="text_user_other_login">第三方登录</string>
    <string name="text_user_resiger_title">Golder账户注册</string>

</resources>
