<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_layout"
    android:background="@color/user_login_bg">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@color/user_login_top_bg"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_user_register_back"
            android:src="@drawable/top_back_arrow"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_login_title"
            android:text="@string/text_user_resiger_title"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:layout_toRightOf="@id/image_user_register_back"
            android:gravity="center"
            android:layout_marginRight="40dp"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_login_username_bg"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_name"
            android:textSize="17sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_account_register"
            android:background="@null"
            android:inputType="number"
            android:lines="1"
            android:layout_marginLeft="20dp"

            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e9e9ec"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:background="@color/user_login_username_bg"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_user_register_name"
            android:textSize="17sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_accountname_register"
            android:background="@null"
            android:lines="1"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e9e9ec"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_login_username_bg"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login_phonenum"
            android:textSize="17sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_phonenum_register"
            android:background="@null"
            android:inputType="number"
            android:lines="1"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e9e9ec"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_login_username_bg"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/text_password"
            android:lines="1"
            android:textSize="17sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_password_register"
            android:background="@null"
            android:lines="1"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e9e9ec"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/user_login_username_bg"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_makesure_password"
            android:textSize="17sp"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_makesuepwd_register"
            android:background="@null"
            android:lines="1"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e6ebeb"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/text_register_green"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_user_resiger"
            android:background="@color/user_login_btn_bg"
            android:gravity="center"
            android:textSize="20sp"
            android:onClick="register"
            android:textColor="@color/white_bg"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            />


    </LinearLayout>


</LinearLayout>