<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_bg">


    <LinearLayout
        android:id="@+id/item_market_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">
    <ImageView
        android:id="@+id/image_home_market"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/home_ykl_market"/>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="62dp">

             <!--整个右边那块-->
             <LinearLayout
                 android:id="@+id/layout_home_rigth"
                 android:layout_width="match_parent"
                 android:layout_height="60dp">
         <LinearLayout
             android:id="@+id/layout_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">


     <TextView
         android:id="@+id/text_home_markettitle"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:text="@string/text_home_ykltitle"
         android:layout_marginLeft="10dp"
         android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_home_delivery_meaasge"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/text_delivery_meaasge"
        android:textSize="14sp"

       />



         </LinearLayout>

    <TextView
        android:id="@+id/text_home_marketdistance"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/text_distance"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"

        />
   <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/top_home_arrow"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="12dp"/>
             </LinearLayout>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="0.8dp"
                 android:background="@color/me_line"
                 android:layout_below="@id/layout_home_rigth"
                 android:layout_marginRight="15dp"/>

         </RelativeLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/me_line"/>

</LinearLayout>