<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/basement_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white_bg"
        android:padding="5dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_order_back"
            android:src="@drawable/top_back_arrow"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"/>



        <TextView
            android:id="@+id/makesure_settlement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_marginRight="37dp"
            android:text="@string/text_payment"
            />
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="9"
         android:orientation="vertical"
         android:background="@color/white_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">
      <TextView
          android:id="@+id/text_bill_number_tip"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_bill_number"
          android:layout_marginLeft="10dp"
          android:layout_centerVertical="true"
          android:textSize="16sp"/>
        <TextView
            android:id="@+id/text_bill_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/gery_title_bg"
            android:layout_toRightOf="@id/text_bill_number_tip"
            android:layout_marginLeft="10dp"/>
        </RelativeLayout>

         <View
             android:layout_width="match_parent"
             android:layout_height="0.8dp"
             android:background="@color/me_line"/>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp">
             <TextView
                 android:id="@+id/text_bill_time_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_bill_time"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:textSize="16sp"/>
             <TextView
                 android:id="@+id/text_bill_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:textColor="@color/gery_title_bg"
                 android:layout_toRightOf="@id/text_bill_time_tip"
                 android:layout_marginLeft="10dp"/>
         </RelativeLayout>

         <View
             android:layout_width="match_parent"
             android:layout_height="0.8dp"
             android:background="@color/me_line"/>

         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp">
             <TextView
                 android:id="@+id/text_bill_money_tip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_bill_money"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:textSize="16sp"/>
             <TextView
                 android:id="@+id/text_bill_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:textColor="@color/gery_title_bg"
                 android:layout_toRightOf="@id/text_bill_money_tip"
                 android:layout_marginLeft="5dp"/>
         </RelativeLayout>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/settlement_order_bg"/>

         </LinearLayout>

    <TextView
        android:id="@+id/text_final_payment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/settlement_order_bg"
        android:text="@string/text_payment"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white_bg"/>
</LinearLayout>